--- a/public/views/createAccount.html
+++ b/public/views/createAccount.html
@@ -6,8 +6,8 @@
     <title>Fullstack Captsone</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <!-- <link href="css/pagination.css" rel="stylesheet" type="text/css" /> -->
-    <link href="css/float-grid.css" rel="stylesheet" type="text/css" />
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="../css/float-grid.css" rel="stylesheet" type="text/css" />
+    <link href="../css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -17,7 +17,7 @@
           <ul>
             <li><a class="home">Home</a></li>
             <li><a class="add-item">Add Item</a></li>
-            <li><a class="login" href="index.html">Login</a></li>
+            <li><a class="login" href="../index.html">Login</a></li>
           </ul>
         </header>
       </div>
@@ -52,6 +52,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://underscorejs.org/underscore-min.js"></script>
     <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
-    <script src="newAccount.js"></script>
+    <script src="../js/local.js"></script>
+    <script src="../js/api.js"></script>
+    <script src="../js/newAccount.js"></script>
   </body>
 </html>
