--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width,intial-scale=1" />
     <title>Fullstack Captsone</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-    <!-- <link href="css/pagination.css" rel="stylesheet" type="text/css" /> -->
-    <link href="css/float-grid.css" rel="stylesheet" type="text/css" />
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="../css/pagination.css" rel="stylesheet" type="text/css" />
+    <link href="../css/float-grid.css" rel="stylesheet" type="text/css" />
+    <link href="../css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -25,27 +25,35 @@
 
     <main role="main">
       <div class="row">
-        <div class="col-12">
-          <section role="region" class="upc">
-            <h2>Enter product UPC</h2>
-            <form class="input-form">
-              <input class="upc-input" type="text" name="upc" value="0035200264013" />
-              <input type="submit" name="submit" />
-            </form>
+        <div class="col-6">
+          <section role="region" class="user-profile">
+            <h2>User Profile</h2>
+            <div class="results"></div>
+            <div class="page-results"></div>
           </section>
         </div>
-      </div>
-      <div class="row">
         <div class="col-6">
-          <section role="region" class="results"></section>
-          <section role="region" class="messages"></section>
+          <section role="region" class="summary"></section>
+          <div id="chartContainer" style="height: 370px; width: 100%;"></div>
         </div>
       </div>
+      <div class="row"></div>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://underscorejs.org/underscore-min.js"></script>
     <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
-    <script src="upcInput.js"></script>
+    <script
+      type="text/javascript"
+      src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"
+    ></script>
+    <script src="../js/local.js"></script>
+    <script src="../js/api.js"></script>
+    <script src="../js/pagination.js"></script>
+    <script src="../js/profile.js"></script>
   </body>
 </html>
