--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
-.hidden {
-  display: none;
-}
+/* body {
+  background-image: url('../images/pexels-photo-409696.jpeg');
+  background: cover fixed no-repeat;
+} */
