--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,14 @@ header {
   display: inline-block;
 }
 
+.login-form,
+.upc,
+.results {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .nav-button {
   display: inline-block;
   padding: 15px 5px;
@@ -156,6 +164,7 @@ button {
   font-size: 12px;
   vertical-align: top;
   min-width: 95px;
+  text-align: center;
 }
 
 button:hover,
@@ -289,10 +298,12 @@ section {
 .messages {
   max-width: 400px;
   padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h3 {
-  text-align: left;
+  text-align: center;
 }
 
 .save,
