--- a/public/views/upcInput.html
+++ b/public/views/upcInput.html
@@ -39,8 +39,21 @@
         <div class="col-12">
           <section role="region" class="upc">
             <h2>Enter product UPC</h2>
+            <div class="upc-info">
+              <a href="https://www.gs1-us.info/upc-codes/" class="upc-link" target="_blank"
+                >Universal Product Codes (UPC)</a
+              >
+              are standardized identifiers for products. To log an item to your profile, enter
+              product UPC below.
+            </div>
             <form class="input-form">
-              <input class="upc-input" type="text" name="upc" value="0035200264013" />
+              <input
+                class="upc-input"
+                type="text"
+                name="upc"
+                placeholder="Enter UPC here"
+                required
+              />
               <input type="submit" name="submit" />
             </form>
           </section>
