--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -38,14 +38,14 @@
       <div class="row">
         <div class="col-6">
           <section role="region" class="user-profile">
-            <h2>User Profile</h2>
+            <h2>Purchase History</h2>
             <div class="results"></div>
             <div class="page-results"></div>
           </section>
         </div>
         <div class="col-6">
           <section role="region" class="summary"></section>
-          <h2>Summary of Purchases</h2>
+          <h2>Summary of Purchase Recyclability</h2>
           <div id="chartContainer" style="height: 370px; width: 100%;"></div>
         </div>
       </div>
