--- a/public/views/upcInput.html
+++ b/public/views/upcInput.html
@@ -38,13 +38,17 @@
       <div class="row">
         <div class="col-12">
           <section role="region" class="upc">
-            <h2>Enter product UPC</h2>
+            <h2>Add Item to Purchase History</h2>
             <div class="upc-info">
               <a href="https://www.gs1-us.info/upc-codes/" class="upc-link" target="_blank"
                 >Universal Product Codes (UPC)</a
               >
-              are standardized identifiers for products. To log an item to your profile, enter
-              product UPC below.
+              are standardized identifiers for products. To log an item to your purchase history,
+              enter product UPC below.
+            </div>
+            <div class="upc-info">
+              Then, add the materials that your product is made of, or up/down vote the existing
+              materials.
             </div>
             <form class="input-form">
               <input
